Updated & Standardized & Updated all Spring & Micronaut & Quarkus & Helidon & Kora2 examples